# bim-business

./: .rustfmt.toml  .typos.toml  Cargo.toml  create-certificates.sh
.github/workflows/: build-test.yml
assets/db/: 1.sql  2.sql  3.sql
deploy/: bim-business-launcher.sh  deploy.sh  docker-compose.yml  dockerfile.db
src/: main.rs
src/business/: app_config.rs  bot_names.rs  bots.rs  db.rs  error.rs  flat_client_config.rs  game_feature_slots.rs  game_features.rs  game_servers.rs  games.rs  inventory.rs  leads.rs  legacy.rs  mod.rs  result.rs  schema.rs  sessions.rs  shop.rs  token.rs  users.rs  wallet.rs
src/webapi/: auth.rs  error.rs  flat_client_config.rs  game_features.rs  game_servers.rs  mod.rs  shop.rs
src/webapi/admin/: app_config.rs  auth.rs  flat_client_config.rs  game_feature_slots.rs  game_features.rs  game_servers.rs  leads.rs  mod.rs  shop.rs  users.rs
src/webapi/client/: account.rs  auth.rs  config.rs  game.rs  mod.rs
src/webapi/gs/: auth.rs  games.rs  hello.rs  mod.rs  users.rs
tests/: run-tests.sh  test-functions.sh  testlib.sh
tests/admin/app-config/: scenario.sh
tests/admin/flat-client-config/: erase.sh  update.sh
tests/admin/game-feature-slots/: scenario.sh
tests/admin/game-features/: scenario.sh
tests/admin/game-servers/: scenario.sh
tests/admin/leads/: scenario.sh
tests/deploy/: one-server.sh  two-servers.sh
tests/flat-client-config/: update.sh
tests/game-features/: scenario.sh  update.sh
tests/game-servers/: scenario.sh
tests/leads/: create-leader.sh  scenario.sh
tests/shop/: scenario.sh  update.sh
(+16 files in other folders)
